간단한 스타일 수정

--- a/src/components/products/product.module.css
+++ b/src/components/products/product.module.css
@@ -18,6 +18,11 @@
   border: 1px solid #c4c4c4;
 }
 
+.product_image:hover {
+  transform: scale(1.03);
+  transition: all 0.2s;
+}
+
 .store {
   margin-bottom: 10px;
 }
