--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -11,20 +11,17 @@
     flex-direction: column;
     align-items: center;
     width: 70%;
-    height: 90%;
+    height: 80%;
 }
 
 .img {
     width: 120px;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .login {
     width: 500px;
-    height: 280px;
-    padding: 2rem;
-    box-shadow: 0px 1px 3px 0px #444;
-    border-radius: 4px;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,9 +31,15 @@
     width: 90%;
     height: 40px;
     border: 1px solid rgb(177,171,171);
+    border-radius: 0.5rem;
     margin-bottom: 0.7rem;
-    font-size: 20px;
+    font-size: 18px;
     padding-left: 10px;
+}
+
+.input_id:focus {
+    border: 2px solid orange;
+    outline: orange;
 }
 
 .input_id::placeholder {
@@ -46,6 +49,20 @@
 .login_btn {
     width: 90%;
     height: 45px;
-    border: 1px solid gray;
-    margin-top: 3.5rem;
+    color: white;
+    font-weight: 700;
+    font-size: 16px;
+    background-color: orange;
+    border: none;
+    border-radius: 0.5rem;
+    margin-top: 2rem;
+}
+
+.p {
+    font-size: 14px;
+}
+
+.span {
+    color: orange;
+    cursor: pointer;
 }
