--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -15,7 +15,7 @@
 }
 
 .img {
-    width: 120px;
+    width: 90px;
     margin-bottom: 0.5rem;
 }
 
@@ -60,6 +60,7 @@
 
 .p {
     font-size: 14px;
+    margin-bottom: 1rem;
 }
 
 .span {
